# nono

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml
.cargo/: config.toml
.config/: nextest.toml
.github/scripts/: check-cli-doc-flags.sh
.github/workflows/: ci.yml  phase-37-linux-resl.yml  phase-45-resl-native-host.yml  phase-46-uat-backlog.yml  release.yml  trusted-signing-smoke.yml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PHASE-41-TRACKER.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v2.12-MILESTONE-AUDIT.md  v2.3-MILESTONE-AUDIT.md  v2.8-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md  v3.1-MILESTONE-AUDIT.md
.planning/architecture/: adr-58-windows-hook-executor.md  adr-65-latency-appendix.md  adr-65-minifilter-go-no-go.md
.planning/debug/: appcontainer-cap-pipe-unreachable.md  ci-linux-cfg-compile-errors.md  claude-exe-dll-init-failed.md  lowil-cwd-write-denied.md  macos-resl-not-firing.md  macos-set-read-timeout-einval.md  nono-shell-claude-hang.md  nono-shell-status-dll-init-failed.md  wfp-broker-token-no-sid.md  wfp-filter-add-1783.md  wfp-write-restricted-0142.md  wfp-wrong-session-dynamic.md
.planning/milestones/: v2.10-REQUIREMENTS.md  v2.12-REQUIREMENTS.md  v2.12-ROADMAP.md  v2.13-MILESTONE-AUDIT.md  v2.13-REQUIREMENTS.md  v2.2-REQUIREMENTS.md  v2.2-ROADMAP.md  v2.3-REQUIREMENTS.md  v2.3-ROADMAP.md  v2.5-MILESTONE-AUDIT.md  v2.5-REQUIREMENTS.md  v2.5-ROADMAP.md  v2.7-REQUIREMENTS.md  (+13 more)
.planning/spikes/001-appcontainer-conpty-tui/: Cargo.toml  README.md
.planning/spikes/001-appcontainer-conpty-tui/src/: main.rs
.planning/spikes/002-post-hoc-token-confine/: Cargo.toml  README.md
.planning/spikes/002-post-hoc-token-confine/src/: main.rs
.planning/spikes/003-daemon-as-launcher/: Cargo.toml  README.md  spike_b_soundness.py
.planning/spikes/003-daemon-as-launcher/src/: main.rs
crates/nono-fltmgr-client/: Cargo.toml
crates/nono-fltmgr-client/src/: lib.rs  main.rs
docs/: docs.json
drivers/: README.md
proj/: ADR-74-privilege-model.md  ADR-86-library-boundary-convergence.md  ADR-87-cr02-audit-bypass.md  DESIGN-engine-abstraction.md  POC-zt-infra-e5-local-provisioner.md
scripts/: build-windows-msi.ps1  regenerate-tuf-test-fixtures.sh  release-dry-run.ps1  sign-poc-local.ps1  sign-windows-artifacts.ps1  validate-windows-msi-contract.ps1  verify-dark.ps1  verify-trust-root-cached.ps1  verify-trust-root-cached.sh  windows-test-harness.ps1
(+1249 files in other folders)
