[workspace]
# Empty [workspace] keeps this spike standalone (does not inherit the parent nono workspace).

[package]
name = "appcontainer-conpty-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "appcontainer-conpty-tui"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Isolation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Pipes",
] }
